# homework1-witchapat

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  app.py  coverage.xml  errors.py  machine.py  mydatabase.db  pyproject.toml  run.py  sonar-project.properties  sqlite_service.py  tox.ini
.github/workflows/: python-test.yml
modules/: __init__.py  api.py  errors.py  exception.py  machine.py  sqlite_service.py
modules/database/: sqlite_service.py
modules/machine/: __init__.py  api.py  errors.py  exception.py  machine.py
test/units/: test_machines.py
tests/units/: .coverage  coverage.xml  mydatabase.db  test_machines.py  test_machines_temp.py
