[tool.poetry]
name = "homework1-witchapat"
version = "0.1.0"
description = ""
authors = ["marcArisen <markjingnum9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
lorem = "^0.1.1"
flake8 = "^5.0.1"
pre-commit = "3.0.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
requests = "^2.28.2"
isort = "5.12.0"
black = "^23.1.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
